# quickmart

./: .gitignore  README.md  database.py  main.py  migration.py  pyproject.toml  requirements.txt
static/: styles.css
templates/: _layout.html  barcode.html  index.html  search_results.html  settings.html
